<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/activityMainName"
        style="@style/CustomTextStyle"
        android:layout_width="159dp"
        android:layout_height="48dp"
        android:gravity="center"
        android:text="@string/animal_application"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="411dp"
        android:layout_height="204dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activityMainName">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="93dp"
            android:layout_height="105dp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/mike"
            android:background="@drawable/rounded_corner"
            android:padding="2dp" />

        <TextView
            android:id="@+id/dogOneName"
            android:layout_width="98dp"
            android:layout_height="31dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:text="@string/dog_name_Mike"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/dogOneDescription"
            android:layout_width="128dp"
            android:layout_height="28dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:text="@string/dog_description_Mike"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/dogOneName" />

        <Button
            android:id="@+id/DogOneDetails"
            android:layout_width="131dp"
            android:layout_height="68dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/details"
            android:background="@drawable/button_container"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="416dp"
        android:layout_height="204dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="93dp"
            android:layout_height="105dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/rounded_corner"
            android:padding="2dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/diaz" />

        <TextView
            android:id="@+id/dogTwoName"
            android:layout_width="98dp"
            android:layout_height="31dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:text="@string/dog_name_Diaz"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/DogTwoDescription"
            android:layout_width="134dp"
            android:layout_height="36dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:text="@string/dog_description_Diaz"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/dogTwoName" />

        <Button
            android:id="@+id/DogTwoDetails"
            android:layout_width="131dp"
            android:layout_height="68dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/details"
            android:background="@drawable/button_container"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="412dp"
        android:layout_height="204dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="93dp"
            android:layout_height="105dp"
            android:layout_marginStart="16dp"
            android:cropToPadding="false"
            android:rotation="0"
            android:rotationY="0"
            app:circularflow_angles="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/jack"
            android:background="@drawable/rounded_corner"
            android:padding="2dp" />

        <TextView
            android:id="@+id/dogThreeName"
            android:layout_width="98dp"
            android:layout_height="31dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/dog_name_Jack"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/DogThreeDescription"
            android:layout_width="105dp"
            android:layout_height="32dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:text="@string/dog_description_Jack"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toBottomOf="@+id/dogThreeName" />

        <Button
            android:id="@+id/DogThreeDetails"
            android:layout_width="131dp"
            android:layout_height="68dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/button_container"
            android:text="@string/details"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>